Fix unit test in JDK 17 env (#1450)
(cherry picked from commit 09bd7d701f1222957a30fd576576bad3f17258ef)